--- a/src/pages/[id].astro
+++ b/src/pages/[id].astro
@@ -1,5 +1,5 @@
 ---
-import { getCollection, type CollectionEntry, render } from "astro:content";
+import { type CollectionEntry, getCollection, render } from "astro:content";
 import ProseLayout from "~/layouts/ProseLayout.astro";
 
 export interface Props {
