feat: Add Astro content loader for policies (#180)

--- a/src/pages/subprocessors.astro
+++ b/src/pages/subprocessors.astro
@@ -1,8 +1,11 @@
 ---
-import { fetchPolicy } from "~/helpers/helpers";
+import { render, getEntry } from "astro:content";
 import ProseLayout from "~/layouts/ProseLayout.astro";
 
-const content = await fetchPolicy("subprocessors");
+const entry = await getEntry("policy", "subprocessors");
+if (entry === undefined) return Astro.redirect("/404");
+
+const { Content } = await render(entry);
 ---
 
 <ProseLayout
@@ -10,5 +13,5 @@ const content = await fetchPolicy("subprocessors");
   description="All the third-party subprocessors that we use to run Namesake."
   color="brown"
 >
-  <article set:html={content} />
+  <Content />
 </ProseLayout>
