Adds headings to pages that use ProseLayout
Now these pages will generate a TableOfContents as long as the number of headings is greater than 0

--- a/src/layouts/ProseLayout.astro
+++ b/src/layouts/ProseLayout.astro
@@ -28,6 +28,7 @@ const {
   color,
   headings,
 } = Astro.props;
+const useTableOfContents = headings && headings.length > 0;
 ---
 
 <BaseLayout
@@ -49,7 +50,7 @@ const {
       annotation={annotation}
     />
     <slot name="after-header" />
-    {headings && <TableOfContents headings={headings} />}
+    {useTableOfContents && <TableOfContents headings={headings} />}
     <section itemprop="articleBody" class="prose">
       <slot />
     </section>
