--- a/src/pages/abuse.astro
+++ b/src/pages/abuse.astro
@@ -5,7 +5,7 @@ import ProseLayout from "~/layouts/ProseLayout.astro";
 const entry = await getEntry("policy", "abuse");
 if (entry === undefined) return Astro.redirect("/404");
 
-const { Content } = await render(entry);
+const { Content, headings } = await render(entry);
 ---
 
 <ProseLayout
@@ -13,6 +13,7 @@ const { Content } = await render(entry);
   description="It is not okay to use Namesake for these restricted purposes."
   color="brown"
   annotation="crossed-off"
+  headings={headings}
 >
   <Content />
 </ProseLayout>
