--- a/src/pages/subprocessors.astro
+++ b/src/pages/subprocessors.astro
@@ -5,13 +5,14 @@ import ProseLayout from "~/layouts/ProseLayout.astro";
 const entry = await getEntry("policy", "subprocessors");
 if (entry === undefined) return Astro.redirect("/404");
 
-const { Content } = await render(entry);
+const { Content, headings } = await render(entry);
 ---
 
 <ProseLayout
   title="Subprocessors"
   description="All the third-party subprocessors that we use to run Namesake."
   color="brown"
+  headings={headings}
 >
   <Content />
 </ProseLayout>
