Fixes font size of toc title

--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -113,6 +113,10 @@ const { headings } = Astro.props;
     }
   }
 
+  h2 {
+    font-size: var(--step-0);
+  }
+
   ul {
     list-style-type: none;
     padding-inline-start: 0;
