--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -14,13 +14,15 @@ const { headings } = Astro.props;
       <h2 class="toc-header" id="tocHeader">
         On this page
       </h2>
-      <ul>
-        {headings.map(({ depth, slug, text }) => (
-          <li style={"--depth: " + depth}>
-            <a href={`#${slug}`}>{text}</a>
-          </li>
-        ))}
-      </ul>
+      <t-o-c>
+        <ul>
+          {headings.map(({ depth, slug, text }) => (
+            <li style={"--depth: " + depth}>
+              <a href={`#${slug}`}>{text}</a>
+            </li>
+          ))}
+        </ul>
+      </t-o-c>
     </nav>
   )
 }
@@ -28,79 +30,131 @@ const { headings } = Astro.props;
   import { annotate } from "rough-notation";
   import type { RoughAnnotation } from "rough-notation/lib/model";
 
-  const toc = document.querySelector(".toc")!;
-  const tocMap = new Map<
-    HTMLHeadingElement,
-    { annotation: RoughAnnotation; rect: DOMRect }
-  >();
+  customElements.define(
+    "t-o-c",
+    class TOC extends HTMLElement {
+      #topIO: IntersectionObserver;
+      #bottomIO: IntersectionObserver;
+      #items: HTMLAnchorElement[];
+      #headings: HTMLHeadingElement[];
+      #annotations: Map<HTMLAnchorElement, RoughAnnotation>;
+      #index = 0;
 
-  let activeHeading: HTMLHeadingElement | null = null;
-  let lastY = 0;
-  // 1 => scrolling down, -1 => scrolling up
-  let scrollDir = 1;
+      set activeIndex(v: number) {
+        let nextIndex = v;
+        if (v < 0) nextIndex = 0;
+        if (v >= this.#headings.length) v = this.#headings.length - 1;
+        this.#index = nextIndex;
+      }
+      get activeIndex() {
+        console.log(this.#index);
+        return this.#index;
+      }
 
-  /** On next frame, update the scroll dir and lastY */
-  const update = () => {
-    if (window.scrollY != lastY) {
-      scrollDir = window.scrollY - lastY > 0 ? 1 : -1;
-      lastY = window.scrollY;
-    }
-    requestAnimationFrame(update);
-  };
-  requestAnimationFrame(update);
+      constructor() {
+        super();
+        this.#annotations = new Map();
+        const middle = window.innerHeight / 2;
 
-  const io = new IntersectionObserver(
-    (entries) => {
-      for (const entry of entries) {
-        if (Object.is(entry.target, activeHeading)) continue;
-
-        if (entry.intersectionRatio > 0.5) {
-          const target = entry.target as HTMLHeadingElement;
-          const { annotation, rect } = tocMap.get(target)!;
-          const activeConfig = tocMap.get(activeHeading!)!;
-          if (activeConfig) {
-            // if scrolling down and the active heading is
-            // higher on the page than the new heading
-            if (scrollDir > 0 && activeConfig.rect.y < rect.y) {
-              activeConfig.annotation.hide();
-              annotation.show();
-              activeHeading = target;
-
-              // if scrolling up and the active heading is lower
-              // on the page than the new heading
-            } else if (scrollDir < 0 && activeConfig.rect.y > rect.y) {
-              activeConfig.annotation.hide();
-              annotation.show();
-              activeHeading = target;
+        this.#topIO = new IntersectionObserver(
+          (entries, _obs) => {
+            for (const entry of entries) {
+              if (entry.isIntersecting) {
+                const { boundingClientRect } = entry;
+                /**
+                 * If the boundingClientRect.top is greater than 0,
+                 * we can safely assume the element is scrolling into the top
+                 * half of the screen from the bottom half
+                 *
+                 * This means we can hide the active annotation, and
+                 * show the next annotation in the index
+                 */
+                if (boundingClientRect.top > 0) {
+                  this.getAnnotationFromIndex(this.activeIndex)?.hide();
+                  this.activeIndex = this.#headings.indexOf(
+                    entry.target as HTMLHeadingElement,
+                  );
+                  this.getAnnotationFromIndex(this.activeIndex)?.show();
+                }
+              }
             }
-          } else {
-            activeHeading = target;
-          }
+          },
+          {
+            threshold: 0,
+            rootMargin: "0px 0px " + -middle + "px 0px",
+          },
+        );
+
+        this.#bottomIO = new IntersectionObserver(
+          (entries, _obs) => {
+            for (const entry of entries) {
+              if (entry.isIntersecting) {
+                const { boundingClientRect } = entry;
+                /**
+                 * If the boundingclientRect.bottom is < window.innerHeight
+                 * we cans afely assume the element is scrolling into the
+                 * bottom half of the viewport from the top half
+                 *
+                 * this means we can deactivate the associated annotation
+                 * and go to the previous heading and activate that
+                 */
+                if (boundingClientRect.bottom < window.innerHeight) {
+                  this.getAnnotationFromIndex(this.activeIndex)?.hide();
+                  // If we're at the very first heading and it is going off screen,
+                  // don't try to annotate the previous one
+                  if (this.activeIndex !== 0) {
+                    this.activeIndex =
+                      this.#headings.indexOf(
+                        entry.target as HTMLHeadingElement,
+                      ) - 1;
+                    this.getAnnotationFromIndex(this.activeIndex)?.show();
+                  }
+                }
+              }
+            }
+          },
+          {
+            threshold: 0,
+            rootMargin: -middle + "px 0px 0px 0px",
+          },
+        );
+
+        this.#items = Array.from(this.querySelectorAll("a"));
+        this.#headings = [];
+
+        this.#items.forEach((link) => {
+          const { hash } = new URL(link.href);
+          const heading = document.querySelector<HTMLHeadingElement>(hash);
+
+          if (!heading) return;
+
+          this.#headings.push(heading);
+          this.#topIO.observe(heading);
+          this.#bottomIO.observe(heading);
+        });
+      }
+
+      getAnnotationFromIndex(i: number): RoughAnnotation | null {
+        if (i < 0 || i > this.#items.length - 1) return null;
+        const item = this.#items[i];
+
+        if (!this.#annotations.has(item)) {
+          this.#annotations.set(
+            item,
+            annotate(item, {
+              type: "underline",
+              animate: false,
+              iterations: 1,
+              multiline: true,
+              padding: 0,
+            }),
+          );
         }
+
+        return this.#annotations.get(item)!;
       }
     },
-    {
-      threshold: Array.from({ length: 100 }, (_, i) => i * 0.01),
-    },
   );
-
-  toc.querySelectorAll("a").forEach((item) => {
-    const id = new URL(item.href).hash;
-    const heading = document.querySelector<HTMLHeadingElement>(id)!;
-
-    const underline = annotate(item, {
-      type: "underline",
-      animate: false,
-      iterations: 1,
-      multiline: true,
-      padding: 0,
-    });
-    tocMap.set(heading, {
-      annotation: underline,
-      rect: heading.getBoundingClientRect(),
-    });
-    io.observe(heading);
-  });
 </script>
 <style>
   @media (min-width: 576px) {
