Uses new media query syntax

--- a/src/layouts/ProseLayout.astro
+++ b/src/layouts/ProseLayout.astro
@@ -70,7 +70,7 @@ const useTableOfContents = headings && headings.length > 0;
       "toc"
       "prose"
       "bios";
-    @media (min-width: 576px) {
+    @media (width >= 900px) {
       grid-template-columns: 3fr 1fr;
       grid-template-areas:
         "head head"
