--- a/src/components/Subscribe.astro
+++ b/src/components/Subscribe.astro
@@ -6,7 +6,7 @@ import { RiArrowRightLine } from "react-icons/ri";
   action="https://namesake.mailcoach.app/subscribe/d21c197c-7919-45d5-b25a-29ee17cd538e"
   method="post"
 >
-  <strong>Get notified when we launch:</strong>
+  <strong>Keep in touch:</strong>
   <div class="input-group">
     <input type="email" name="email" placeholder="Your email" required />
     <button type="submit">Subscribe <RiArrowRightLine /></button>
@@ -22,7 +22,7 @@ import { RiArrowRightLine } from "react-icons/ri";
 <style lang="scss">
   form {
     position: relative;
-    border-radius: 3px;
+    border-radius: 5px;
     width: 100%;
     max-width: 520px;
 
@@ -42,7 +42,7 @@ import { RiArrowRightLine } from "react-icons/ri";
   button {
     border: none;
     background: var(--bg);
-    border-radius: 3px;
+    border-radius: 5px;
     color: var(--text);
     padding: var(--space-xs) var(--space-s);
   }
