--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -5,6 +5,9 @@ import PageHeader from "~/components/PageHeader.astro";
 import BaseLayout from "~/layouts/BaseLayout.astro";
 
 const posts = await getCollection("posts");
+const sortedPosts = posts.sort(
+  (a, b) => b.data.publishDate.getTime() - a.data.publishDate.getTime(),
+);
 ---
 
 <BaseLayout
@@ -18,8 +21,8 @@ const posts = await getCollection("posts");
   />
   <div class="posts">
     {
-      posts.length ? (
-        posts.map(async (post) => {
+      sortedPosts.length ? (
+        sortedPosts.map(async (post) => {
           const authors = await getEntries(post.data.authors);
           const authorsNames = authors.map((author) => author.data.name);
 
