--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -153,3 +153,65 @@ img {
   outline: 3px solid var(--text);
   outline-offset: 2px;
 }
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: var(--space-s) var(--space-l);
+  border-radius: 5px;
+  font-weight: 600;
+  text-decoration: none;
+  height: var(--space-3xl);
+  gap: var(--space-xs);
+  border: 3px solid transparent;
+
+  &.primary {
+    background-color: var(--text);
+    border-color: var(--text);
+    color: var(--bg);
+
+    @media (hover: hover) {
+      &:hover {
+        background-color: var(--bg);
+        color: var(--text);
+      }
+    }
+  }
+
+  &.secondary {
+    background-color: var(--bg);
+    color: var(--text);
+    border-color: var(--text);
+
+    @media (hover: hover) {
+      &:hover {
+        background-color: var(--text);
+        color: var(--bg);
+      }
+    }
+  }
+
+  &.ghost {
+    background-color: transparent;
+    color: var(--text);
+    border-color: transparent;
+
+    @media (hover: hover) {
+      &:hover {
+        border-color: var(--text);
+      }
+    }
+  }
+
+  &.small {
+    padding: var(--space-xs) var(--space-s);
+    height: var(--space-2xl);
+    font-size: var(--step--1);
+  }
+
+  svg {
+    width: 1.25em;
+    height: 1.25em;
+  }
+}
