--- a/src/pages/abuse.astro
+++ b/src/pages/abuse.astro
@@ -1,5 +1,5 @@
 ---
-import { render, getEntry } from "astro:content";
+import { getEntry, render } from "astro:content";
 import ProseLayout from "~/layouts/ProseLayout.astro";
 
 const entry = await getEntry("policy", "abuse");
